fix(UU/footer): Increase contrast on Copyright-footer.

--- a/docs/material_theme_stylesheet_overrides/uu.css
+++ b/docs/material_theme_stylesheet_overrides/uu.css
@@ -1,3 +1,7 @@
+.md-footer-copyright {
+  color: #ffffff;
+}
+
 a {
   text-decoration: underline;
 }
